[project]
name = "songbloom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub",
    "jieba-fast",
    "pypinyin",
    "cn2an",
    "wordsegment",
    "g2p-en",
    "lightning",
    "nltk",
    "omegaconf",
    "torch",
    "torchaudio",
    "transformers",
    "einops",
    "spacy",
    "num2words",
    "descript-audio-codec",
    "vector_quantize_pytorch",
    "accelerate",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "SongBloom"
module-root = ""